[gd_scene load_steps=13 format=3 uid="uid://dl0pej2gavedv"]

[ext_resource type="Script" path="res://firechest.gd" id="1_sp3wt"]
[ext_resource type="Texture2D" uid="uid://c2gdv5mjsye35" path="res://adventur of timtim/—Pngtree—brush circle creative brush effect_60205152.png" id="2_nhl5h"]
[ext_resource type="Texture2D" uid="uid://cngwyx6dvnepc" path="res://gm assets/Foozle_2DE0001_Pixel_Magic_Effects/Pixel_Magic_Effects_Animations.png" id="3_vdfm0"]
[ext_resource type="Shader" path="res://adventur of timtim/tileset.gdshader" id="4_kfay1"]
[ext_resource type="Texture2D" uid="uid://dv1e11l84uieq" path="res://gm assets/Animated Chests/Chests.png" id="5_ifnjt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ruuw5"]
shader = ExtResource("4_kfay1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_namiy"]
shader = ExtResource("4_kfay1")

[sub_resource type="Animation" id="Animation_xr3fv"]
resource_name = "firechestopen"
length = 3.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../energy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7, 3.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../energy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.7, 1.9, 2.1, 2.2, 2.3, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8.3688, 13.084), Vector2(-8.3688, 9.81301), Vector2(-8.3688, 2.45325), Vector2(-8.3688, -5.72426), Vector2(-8.3688, -13.084), Vector2(-8.3688, -21.2615), Vector2(-8.3688, -18.8083)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../fire:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7, 3.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../fire:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.7, 2.1, 2.2, 2.3, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-7.53192, 11.4485), Vector2(-8.3688, 1.6355), Vector2(-7.53192, -5.72426), Vector2(-7.53192, -13.084), Vector2(-7.53192, -21.2615), Vector2(-7.53192, -18.8083)]
}

[sub_resource type="Animation" id="Animation_nd1oo"]
resource_name = "pressf"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_l02ko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../energy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../energy:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8.3688, 13.084)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../fire:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../fire:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.53192, 11.4485)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yk7ry"]
_data = {
"RESET": SubResource("Animation_l02ko"),
"firechestopen": SubResource("Animation_xr3fv"),
"pressf": SubResource("Animation_nd1oo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3iid6"]
size = Vector2(59.4184, 29.439)

[node name="firechest" type="Node2D"]
scale = Vector2(1.19492, 1.22287)
script = ExtResource("1_sp3wt")

[node name="energy" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(-8.3688, 13.084)
scale = Vector2(0.0187599, 0.0184921)
texture = ExtResource("2_nhl5h")

[node name="fire" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_ruuw5")
position = Vector2(-7.53192, 11.4485)
scale = Vector2(0.214497, 0.232112)
texture = ExtResource("3_vdfm0")
region_enabled = true
region_rect = Rect2(16, 258, 55, 58)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_namiy")
texture = ExtResource("5_ifnjt")
hframes = 5
vframes = 8
frame = 10

[node name="Label" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 0)
offset_left = -18.0
offset_top = -19.0
offset_right = 34.0
offset_bottom = 4.0
scale = Vector2(0.403505, 0.37115)
text = "press f"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-8, -19)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_yk7ry")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8388608
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.92908, 0.817751)
shape = SubResource("RectangleShape2D_3iid6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
